--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -84,6 +84,8 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=960,Y=0)
+MultipleInstancePositions=(X=0,Y=520)
+MultipleInstancePositions=(X=960,Y=520)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -105,11 +107,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MyMenu/MM_Level/MM_Level
-MRUItem1=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -734,11 +736,21 @@ MyPlayer_C.Mesh=True
 MyPlayer_C.Clothing=True
 MyPlayer_C.ClothingSimulation=True
 MyPlayer_C.Lighting=True
+REINST_MasterMonster_C_290.Variable=True
+REINST_MasterMonster_C_290.TransformCommon=True
+REINST_MasterMonster_C_290.Sockets=True
+REINST_MasterMonster_C_290.Shape=True
+REINST_MasterMonster_C_290.Navigation=True
+REINST_MasterMonster_C_290.Rendering=True
+REINST_MasterMonster_C_290.Physics=True
+REINST_MasterMonster_C_290.Collision=True
+REINST_MasterMonster_C_290.Tags=True
+REINST_MasterMonster_C_290.ComponentReplication=True
+REINST_MasterMonster_C_290.Cooking=True
+REINST_MasterMonster_C_290.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
+CleanShutdown=False
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -768,12 +780,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
-MRUItem1=/Game/MyGame/MyPlayer/MyPlayer
-MRUItem2=/Game/MyMenu/MM_Level/MM_Level
-MRUItem3=/Game/MyGame/MyPlayer/HealthComponent
-MRUItem4=/Game/MyMonsters/MasterMonster
-MRUItem5=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyMonsters/MasterMonster
+MRUItem1=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
+MRUItem2=/Game/MyGame/MyPlayer/HealthComponent
+MRUItem3=/Game/MyWorlds/DefaultWorld
+MRUItem4=/Game/MyGame/MyPlayer/MyPlayer
+MRUItem5=/Game/MyMenu/MM_Level/MM_Level
 MRUItem6=/Game/MyGame/MyGameBlueprints/MyGameState/MyGameState
 MRUItem7=/Game/MyGame/MyPlayer/PlayerHealth
 MRUItem8=/Game/MyGame/MyGameBlueprints/MyPlayerState/MyPlayerState
@@ -1489,6 +1501,67 @@ User Created=False
 
 [DetailCustomWidgetExpansion]
 SphereComponent=SphereComponent.Collision.Collision,
+CryptoKeysSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+GameMapsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AISystem=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AnimationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AudioSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+CollisionProfile=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ConsoleSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+CookerSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+CrowdManager=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+Engine=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+HierarchicalLODSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+RecastNavMesh=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+NavigationSystemV1=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+NetworkSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+PhysicsSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+RendererSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+SlateSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+StreamingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+TutorialSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+HTML5TargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MacTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+LuminRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MagicLeapSDKSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MagicLeapEmulatorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+MagicLeapSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+OnlineSubsystemConfigurator_PluginSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
+OnlineSubsystemConfiguratorBPLibrarySettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.RevivePlayer,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1525,13 +1598,20 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
-Object=
-StaticMeshComponent=
-MeshComponent=
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
+MyPlayer_C=
+Character=
+Pawn=
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MasterMonster_C=
+REINST_MasterMonster_C_290="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 
