--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=315,Y=143)
-LastExecutedPlayModeType=PlayMode_InNewProcess
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -65,7 +65,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -82,8 +82,8 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=315,Y=143)
-MultipleInstancePositions=(X=0,Y=0)
-MultipleInstancePositions=(X=960,Y=0)
+MultipleInstancePositions=(X=-2020,Y=118)
+MultipleInstancePositions=(X=-1031,Y=120)
 MultipleInstancePositions=(X=0,Y=520)
 MultipleInstancePositions=(X=960,Y=520)
 
@@ -107,11 +107,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1",BufferVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MyMenu/MM_Level/MM_Level
-MRUItem1=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMenu/MM_Level/MM_Level
 
 [EditorStartup]
-LastLevel=/Game/MyMenu/MM_Level/MM_Level
+LastLevel=/Game/MyWorlds/DefaultWorld
 
 [DetailCategories]
 WorldSettings.World=True
@@ -759,8 +759,6 @@ AssetManagerSettings.Asset Registry=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyGame/MyPlayer/MyPlayer.MyPlayer
-OpenAssetsAtExit=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode.MyGameMode
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowser]
@@ -791,9 +789,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyMenu/MM_Player/MM_Player
-MRUItem1=/Game/MyMenu/MM_Level/MM_Level
-MRUItem2=/Game/MyWorlds/DefaultWorld
+MRUItem0=/Game/MyWorlds/DefaultWorld
+MRUItem1=/Game/MyMenu/MM_Player/MM_Player
+MRUItem2=/Game/MyMenu/MM_Level/MM_Level
 MRUItem3=/Game/MyGame/MyPlayer/MyPlayer
 MRUItem4=/Game/MyGame/MyGameBlueprints/MyGameMode/MyGameMode
 MRUItem5=/Game/MyMonsters/MasterMonster
@@ -1643,8 +1641,8 @@ ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" \"Object.TrackSettings.FbxSettings.FbxSettings[1]\" \"Object.TrackSettings.FbxSettings.FbxSettings[1].PropertyPath\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
-AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
-IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
+AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
+IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
